@@ -1,14 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST ruby-stemmer-0.9.1.gem 142848 RMD160 56e8fcccd77b62c9a4de3c812d898e7107204203 SHA1 d7b2688ca58e480f646fe39d2512bc564c0f4cd6 SHA256 8f55bf8fdf7ea6987559d289f23d3f82b43780195657e92402be0e540b32e4e5
-EBUILD ruby-stemmer-0.9.1.ebuild 623 RMD160 f1874adfed936ec3ba5f77e68fcbd3b7acac8ef4 SHA1 1d2eb3618744996aae81c27e3108358b9dc0e40d SHA256 bd0fe53ca8e7ee7bc3df0a99a836b18d401f219f4f3a0d5c2de9cecd17466663
-MISC ChangeLog 373 RMD160 679758ff6adfa73dae9076d7a2665bfc6646bd46 SHA1 44228e4d9f7f2e5e6238674932556d0712d871fe SHA256 95ab326c821efbf6e4d53150dc8476ee2bd5351d6ba963a3f444521babdb4687
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+DIST ruby-stemmer-0.9.1.gem 142848 SHA256 8f55bf8fdf7ea6987559d289f23d3f82b43780195657e92402be0e540b32e4e5 SHA512 2f75e7c5fce562fbccad527c8c2a9691ebdbb602bbf8ceaee0c605cf6f1c4ea3c02989f5eec261ec1cf55eec55704717ca8e68632a8ecf911ce6560059680d0e WHIRLPOOL cff16ce09ea526e83fbf99cf76584ede4a791111dbb828e93ce29500b356da0d3cd5c935318dd489766411fca2c9e12fae7a9fedabf0e45e200b3cb41b63e3fc
+DIST ruby-stemmer-0.9.3.gem 143360 SHA256 616115f0cf681fd719ec51a2c749fdef87ea5844d2d9f93f93bf0067d0a9639c SHA512 9977261208b8b80bf694f10865b5ab7c60a58934f36bc157fb7b051fe6a5d05caa91a4cb597526818cf9cce60ee45ff05e6236f3dc7e0b5084df75b78f2dba1c WHIRLPOOL 0a47e943c69a44e8f1a5ccafc74fa2768f9ed03def3aecbbdfbb758ecac823c61f894b0381ff46ee27ed3c874f3b1ccf5e5838954d343c111af6b6b3230056df
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk34myUACgkQrnu0mw69JkqZOwD9HzCa8qDOZXBDJi+eswzymBD6
-+aoLh2Rt10i4GLVNhRcA/23rFemfMv7yxHHngT5oj02NzCxCBiHizoqJSEnSyThq
-=rTue
+iF4EAREIAAYFAlBuoe4ACgkQiIP6VqMIqNcJFAD/RL7FEM/j/1X5PooX9/L1MpAU
+GF1Xdo092RIgyyAlTZQA/3ZeZcbVqnjmMG1YKPQVjwkynOk0V2LKEM0hsP2nAFcE
+=iupG
 -----END PGP SIGNATURE-----
